--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,33 @@ group 'uk.ac.ebi.subs.fileupload'
 version '0.1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'org.springframework.boot'
 
 sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     mavenCentral()
     jcenter()
 }
 
-dependencies {
-    compile group: 'io.tus.java.client', name: 'tus-java-client', version: '0.3.1'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.1.RELEASE")
+    }
 }
+
+dependencies {
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter'
+    compile group: 'io.tus.java.client', name: 'tus-java-client', version: '0.3.1'
+
+    testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
+}
+
+springBoot {
+    executable = true
+}
+mainClassName = "uk.ac.ebi.subs.fileupload.UploadApplication"
