--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,13 @@ buildscript {
 
 dependencies {
     compile group: 'org.springframework.boot', name: 'spring-boot-starter'
+    compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    compile("com.h2database:h2")
     compile group: 'io.tus.java.client', name: 'tus-java-client', version: '0.3.1'
+    compile group: 'org.projectlombok', name: 'lombok'
+    compile("com.fasterxml.jackson.core:jackson-databind")
+
 
     testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 }
